--- a/style.css
+++ b/style.css
@@ -29,3 +29,34 @@ h1 {
     transform: translateY(0);
   }
 }
+a {
+  color: #fff;
+  text-decoration: none;
+  position: relative;
+  display: inline-block;
+  font-size: 1.2rem;
+  padding: 5px 10px;
+  transition: all 0.3s ease;
+}
+
+a::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #ff4081;
+  transform: scaleX(0);
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+a:hover {
+  color: #ff4081;
+}
+
+a:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
